--- a/src/app/components/proyecto-item/proyecto-item.component.html
+++ b/src/app/components/proyecto-item/proyecto-item.component.html
@@ -6,8 +6,6 @@
     <h2 class="h3"><a href="{{proyecto.urlProyecto}}">Link al {{proyecto.nombre}}</a></h2>
   </div>
   <div class="buttons">
-    <span class="click" (click)="onEdit(proyecto)"><i class="fas fa-edit fa-xl" id="edit"></i></span>
-    <span class="click" (click)="onDelete(proyecto)"><i class="fa-solid fa-trash-can fa-xl"
-        [ngStyle]="{'color': 'red'}"></i></span>
+    <span *ngIf="isLogged" class="click" (click)="onEdit(proyecto)"><i class="fas fa-edit fa-xl" id="edit"></i></span>
   </div>
 </div>
