--- a/src/app/components/skill-item/skill-item.component.html
+++ b/src/app/components/skill-item/skill-item.component.html
@@ -17,11 +17,8 @@
                          [lazy]="false"
         ></circle-progress>
   <div class="buttons">
-    <span class="click" (click)="onEdit(skill)"><i class="fas fa-edit fa-xl"
+    <span *ngIf="isLogged" class="click" (click)="onEdit(skill)"><i class="fas fa-edit fa-xl"
       id="edit"></i></span>
-        &nbsp;
-    <span class="click" (click)="onDelete(skill)"><i class="fa-solid fa-trash-can fa-xl"
-        [ngStyle]="{'color': 'red'}"></i></span>
   </div>
 </div>
 
