--- a/src/app/components/skill/skill.component.html
+++ b/src/app/components/skill/skill.component.html
@@ -57,7 +57,8 @@
     </form>
   </div>
   <div class="modal-footer">
-    <button type="button" (click)="deleteSkill()" class="btn btn-danger" data-bs-dismiss="modal">Borrar</button>
+    <button *ngIf="!isAdd" type="button" (click)="deleteSkill()" class="btn btn-danger" data-bs-dismiss="modal">Borrar</button>
+    <button *ngIf="isAdd"type="button" class="btn btn-danger" (click)="modal.dismiss()">Cancelar</button>
     <button type="button" (click)="onSubmit()" [disabled]="formSkill.invalid" class="btn btn-primary">Guardar</button>
   </div>
 </ng-template>
