--- a/src/app/components/proyecto/proyecto.component.html
+++ b/src/app/components/proyecto/proyecto.component.html
@@ -15,7 +15,7 @@
 <!-- MODAL FORM ADD/EDIT-->
 <ng-template #proyecto let-modal>
   <div class="modal-header" id="proyectoModal">
-    <h5 *ngIf="isAdd" class="modal-title">Añadir Proyecto</h5>
+    <h5 *ngIf="isAdd" class="modal-title">Nuevo Proyecto</h5>
     <h5 *ngIf="!isAdd" class="modal-title">Editar Proyecto</h5>
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
       (click)="modal.dismiss()"></button>
