--- a/src/app/components/skill/skill.component.html
+++ b/src/app/components/skill/skill.component.html
@@ -16,7 +16,7 @@
 <!-- MODAL FORM ADD/EDIT-->
 <ng-template #skill let-modal>
   <div class="modal-header" id="skillModal">
-    <h5 *ngIf="isAdd" class="modal-title">Añadir Skill</h5>
+    <h5 *ngIf="isAdd" class="modal-title">Nueva Skill</h5>
     <h5 *ngIf="!isAdd" class="modal-title">Editar Skill</h5>
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
       (click)="modal.dismiss()"></button>
