--- a/src/app/components/educacion-item/educacion-item.component.css
+++ b/src/app/components/educacion-item/educacion-item.component.css
@@ -21,9 +21,15 @@
 }
 
 img{
-  max-height: 150px;
-  max-width: 150px;
+  height: 150px;
+  width: 150px;
 }
+
+.edu{
+  margin-left:30px;
+}
+
+
 
 
 
