--- a/src/app/components/educacion-item/educacion-item.component.html
+++ b/src/app/components/educacion-item/educacion-item.component.html
@@ -1,16 +1,19 @@
 <div class="container-item">
   <div class="item">
     <div class="logo">
-      <img [src]="educacion.logoEducacion">
+      <img *ngIf="educacion.logoEducacion !='' && educacion.logoEducacion != null"
+      [src]="educacion.logoEducacion">
+      <img *ngIf="educacion.logoEducacion == ''|| educacion.logoEducacion == null"
+      src="../../../assets/blank.jpg">
     </div>
     <div class="edu">
-      <h1 class="h1">Titulo de la carrera: {{educacion.titulo}}</h1>
-      <h2 class="h3"> Nombre de la institución: {{educacion.nombreInstitucion}}</h2>
-      <p class="h3"> Nivel de estudio: {{educacion.gradoEducacion}} - {{educacion.estadoEducacion}} </p>
-      <p class="h3"> Fecha de ingreso {{educacion.fechaInicio | date:'MMMM  yyyy'}} - Fecha de egreso: {{educacion.fechaFinal | date:'MMMM  yyyy'}}</p>
+      <h1 class="h1">{{educacion.titulo}}</h1>
+      <h2 class="h2"> {{educacion.nombreInstitucion}}</h2>
+      <p class="h3"> {{educacion.gradoEducacion}} - {{educacion.estadoEducacion}} </p>
+      <p class="h4"> {{educacion.fechaInicio | date:'MMMM yyyy'}} - {{educacion.fechaFinal | date:'MMMM yyyy'}}</p>
     </div>
   </div>
   <div class="buttons">
-    <span  *ngIf="isLogged" class="click" (click)="onEdit(educacion)"><i class="fas fa-edit fa-xl" id="edit"></i></span>
+    <span *ngIf="isLogged" class="click" (click)="onEdit(educacion)"><i class="fas fa-edit fa-xl" id="edit"></i></span>
   </div>
 </div>
