--- a/src/app/components/encabezado/encabezado.component.html
+++ b/src/app/components/encabezado/encabezado.component.html
@@ -1,20 +1,24 @@
-<div class="container">
+<header class="container">
   <div class="usuario">
     <div class="banner">
       <div class="redes">
         <app-redes-sociales></app-redes-sociales>
       </div>
-      <img src="../../../assets/vecteezybanner-backgroundbk0421_generated.jpg" class="img-fluid" alt="Responsive image">
-      <!-- <img [src]="personaDto.urlBanner" class="img-fluid" alt="Responsive image"> -->
+      <img *ngIf="personaDto.urlBanner == ''" src="../../../assets/vecteezybanner-backgroundbk0421_generated.jpg" class="img-fluid" alt="Responsive image">
+      <img *ngIf="personaDto.urlBanner != ''" [src]="personaDto.urlBanner" class="img-fluid" alt="Responsive image">
       <span *ngIf="isLogged" class="click" (click)="editarBanner()"><i class="fas fa-edit fa-xl"></i></span>
     </div>
     <div class="avatar">
-      <img img [src]="personaDto.urlAvatar">
+      <img *ngIf="personaDto.urlAvatar != ''" class="img-responsive" [src]="personaDto.urlAvatar">
+      <img *ngIf="personaDto.urlAvatar == ''" class="img-responsive" src="../../../assets/avatar.png">
       <span *ngIf="isLogged" class="click" (click)="editarAvatar()"><i class="fas fa-edit fa-xl"></i></span>
       <h2>{{personaDto.titulo}}</h2>
     </div>
     <div class="nombre">
       <h1>{{personaDto.nombre + " " + personaDto.apellido}}</h1>
+      <h3>{{edad}} Años</h3>
+      <h4>{{personaDto.localidad}}</h4>
+      <h5>Email: {{personaDto.email}}</h5>
       <div class="acerca">
         <p>{{personaDto.acerca_de}}</p>
       </div>
@@ -23,7 +27,7 @@
       <span *ngIf="isLogged" class="click" (click)="editarPersona()"><i class="fas fa-edit fa-xl" id="edit"></i></span>
     </div>
   </div>
-</div>
+</header>
 
 <!-- MODAL FORM EDIT-->
 <ng-template #persona let-modal>
