--- a/src/app/components/proyecto-item/proyecto-item.component.html
+++ b/src/app/components/proyecto-item/proyecto-item.component.html
@@ -1,8 +1,8 @@
 <div class="container-item">
   <div class="item">
-    <h1 class="h1"> Nombre del proyecto: {{proyecto.nombre}}</h1>
-    <h2 class="h3"> Fecha: {{proyecto.fecha | date:'MMMM  yyyy'}}</h2>
-    <p class="h3"> Descripcion: {{proyecto.descripcion}}
+    <h1 class="h1"> {{proyecto.nombre}}</h1>
+    <h2 class="h3"> {{proyecto.fecha | date:'MMMM  yyyy'}}</h2>
+    <p class="h3">  {{proyecto.descripcion}}
     <h2 class="h3"><a href="{{proyecto.urlProyecto}}">Link al {{proyecto.nombre}}</a></h2>
   </div>
   <div class="buttons">
