--- a/src/app/components/encabezado/encabezado.component.html
+++ b/src/app/components/encabezado/encabezado.component.html
@@ -42,7 +42,10 @@
     <form class="md-form mb-5" [formGroup]="formPerso" (ngSubmit)="onSubmit()">
       <div class="md-form mb-4" *ngIf="editPerso">
         <label>Nombre:</label>
-        <input class="form-control" type="text" formControlName="nombre" placeholder="Ingrese un nombre" />
+        <input class="form-control" type="text"
+        [ngClass]="{'is-invalid': nombre?.errors && nombre?.touched,
+          'is-valid':  !nombre?.errors && nombre?.value }"
+        formControlName="nombre" placeholder="Ingrese un nombre" />
         <div *ngIf="nombre?.errors && nombre?.touched">
           <p *ngIf="nombre?.hasError('required')" class="text-danger">
             El nombre es requerido.
@@ -51,7 +54,10 @@
       </div>
       <div class="md-form mb-4" *ngIf="editPerso">
         <label>Apellido:</label>
-        <input class="form-control" type="text" formControlName="apellido" placeholder="Ingrese un apellido">
+        <input class="form-control" type="text"
+        [ngClass]="{'is-invalid': apellido?.errors && apellido?.touched,
+          'is-valid':  !apellido?.errors && apellido?.value }"
+        formControlName="apellido" placeholder="Ingrese un apellido">
         <div *ngIf="apellido?.errors && apellido?.touched">
           <p *ngIf="apellido?.hasError('required')" class="text-danger">
             El apellido es requerido.
@@ -60,7 +66,10 @@
       </div>
       <div class="md-form mb-4" *ngIf="editPerso">
         <label>Fecha de nacimiento:</label>
-        <input class="form-control" type="date" formControlName="fecha_nacimiento"
+        <input class="form-control" type="date"
+        [ngClass]="{'is-invalid': fecha_nacimiento?.errors && fecha_nacimiento?.touched,
+          'is-valid':  !fecha_nacimiento?.errors && fecha_nacimiento?.value }"
+        formControlName="fecha_nacimiento"
           placeholder="Ingrese su fecha de nacimiento">
         <div *ngIf="fecha_nacimiento?.errors && fecha_nacimiento?.touched">
           <p *ngIf="fecha_nacimiento?.hasError('required')" class="text-danger">
@@ -70,8 +79,11 @@
       </div>
       <div class="md-form mb-4" *ngIf="editPerso">
         <label>Titulo:</label>
-        <input class="form-control" type="text" formControlName="titulo" placeholder="Ingrese su titulo">
-        <div *ngIf="titulo?.errors && titulo?.touched">
+        <input class="form-control" type="text"
+        [ngClass]="{'is-invalid': titulo?.errors && titulo?.touched,
+          'is-valid':  !titulo?.errors && titulo?.value }"
+        formControlName="titulo" placeholder="Ingrese su titulo">
+        <div *ngIf="titulo?.errors && titulo?.value">
           <p *ngIf="titulo?.hasError('required')" class="text-danger">
             El titulo es requerido.
           </p>
@@ -79,16 +91,26 @@
       </div>
       <div class="md-form mb-4" *ngIf="editPerso">
         <label>Telefono:</label>
-        <input class="form-control" type="text" formControlName="telefono" placeholder="Ingrese su telefono">
+        <input class="form-control" type="text"
+        [ngClass]="{'is-invalid': telefono?.errors && telefono?.touched,
+          'is-valid':  !telefono?.errors && telefono?.value }"
+        formControlName="telefono" placeholder="Ingrese su telefono" maxlength="12" minlength="8">
         <div *ngIf="telefono?.errors && telefono?.touched">
           <p *ngIf="telefono?.hasError('required')" class="text-danger">
             El telefono es requerido.
+          </p>
+          <p *ngIf="formPerso.get('telefono')?.hasError('pattern') ||
+            telefono?.errors?.['minlength'] || telefono?.errors?.['maxlength']" class="text-danger">
+            Ingrese un numero de telefono valido.
           </p>
         </div>
       </div>
       <div class="md-form mb-4" *ngIf="editPerso">
         <label>Provincia</label>
-        <select class="form-control" formControlName="provincia" onchange="selectProvincia()">
+        <select class="form-control"
+        [ngClass]="{'is-invalid': provincia?.errors && provincia?.touched,
+          'is-valid':  !provincia?.errors && provincia?.value }"
+        formControlName="provincia" onchange="selectProvincia()">
           <option [ngValue]="null" disabled>Elija una provincia</option>
           <option *ngFor="let provincia of provincias" [ngValue]="provincia.provincia">
             {{provincia.provincia}}
@@ -97,7 +119,9 @@
       </div>
       <div class="md-form mb-4" *ngIf="editPerso">
         <label>Localidad</label>
-        <select class="form-control" formControlName="localidad">
+        <select class="form-control" formControlName="localidad"
+        [ngClass]="{'is-invalid': localidad?.errors && localidad?.touched,
+          'is-valid':  !localidad?.errors && localidad?.value }">
           <option [ngValue]="null" disabled>Elija una localidad</option>
           <option *ngFor="let localidad of localidades" [ngValue]="localidad.localidad">
             {{localidad.localidad}}
@@ -106,23 +130,26 @@
       </div>
       <div class="md-form mb-4" *ngIf="editPerso">
         <label>Acerca de:</label>
-        <textarea class="form-control" type="text" formControlName="acerca_de"
+        <textarea class="form-control" type="text"
+        [ngClass]="{'is-invalid': acerca_de?.errors && acerca_de?.touched,
+          'is-valid':  !acerca_de?.errors && acerca_de?.value }"
+        formControlName="acerca_de"
           placeholder="Ingrese una descripcion sobre usted" rows="4"></textarea>
         <div *ngIf="acerca_de?.errors && acerca_de?.touched">
           <p *ngIf="acerca_de?.hasError('required')" class="text-danger">
-            El titulo es requerido.
+            La descripcion es requerido.
           </p>
-          <p *ngIf="acerca_de?.errors?.['minlength']" class="text-danger">
-            La descripcion debe tener al menos 20 caracteres.
-          </p>
-          <p *ngIf="acerca_de?.errors?.['maxlength'] || acerca_de?.errors?.['maxlength']" class="text-danger">
-            La descripcion debe tener menos de 180 caracteres.
+          <p *ngIf="acerca_de?.errors?.['minlength'] || acerca_de?.errors?.['maxlength']" class="text-danger">
+            La descripcion debe tener al menos 20 caracteres y un maximo de 180 caracteres.
           </p>
         </div>
       </div>
       <div class="md-form mb-4" *ngIf="editAvatar && !editPerso">
         <label>Imagen URL:</label>
-        <input class="form-control" type="text" formControlName="urlAvatar" placeholder="Ingrese una URL" />
+        <input class="form-control" type="text"
+        [ngClass]="{'is-invalid': formPerso.get('urlAvatar')?.hasError('pattern'),
+        'is-valid': !formPerso.get('urlAvatar')?.hasError('pattern') && formPerso.get('urlAvatar')?.value}"
+        formControlName="urlAvatar" placeholder="Ingrese una URL" />
         <div *ngIf="urlAvatar?.errors && urlAvatar?.touched">
           <p *ngIf="formPerso.get('urlAvatar')?.hasError('pattern')" class="text-danger">
             Ingrese una URL valida.
@@ -131,7 +158,10 @@
       </div>
       <div class="md-form mb-4" *ngIf="!editAvatar && !editPerso">
         <label>Banner URL:</label>
-        <input class="form-control" type="text" formControlName="urlBanner" placeholder="Ingrese una URL" />
+        <input class="form-control" type="text"
+        [ngClass]="{'is-invalid': formPerso.get('urlBanner')?.hasError('pattern'),
+        'is-valid': !formPerso.get('urlBanner')?.hasError('pattern') && formPerso.get('urlBanner')?.value}"
+        formControlName="urlBanner" placeholder="Ingrese una URL" />
         <div *ngIf="urlBanner?.errors && urlBanner?.touched">
           <p *ngIf="formPerso.get('urlBanner')?.hasError('pattern')" class="text-danger">
             Ingrese una URL valida.
