--- a/src/app/components/experiencia-laboral/experiencia-laboral.component.html
+++ b/src/app/components/experiencia-laboral/experiencia-laboral.component.html
@@ -23,7 +23,10 @@
     <form class="md-form mb-5" [formGroup]="formExp" (ngSubmit)="onSubmit()">
       <div class="md-form mb-4">
         <label>Nombre empresa:</label>
-        <input class="form-control" type="text" formControlName="nombreEmpresa" placeholder="Introduzca el nombre de la empresa" />
+        <input class="form-control" type="text"
+        [ngClass]="{'is-invalid': nombreEmpresa?.errors && nombreEmpresa?.touched,
+      'is-valid':  !nombreEmpresa?.errors && nombreEmpresa?.value }"
+        formControlName="nombreEmpresa" placeholder="Introduzca el nombre de la empresa" />
         <div *ngIf="nombreEmpresa?.errors && nombreEmpresa?.touched">
           <p *ngIf="nombreEmpresa?.hasError('required')" class="text-danger">
             El nombre de la empresa es requerido.
@@ -32,7 +35,10 @@
       </div>
       <div class="md-form mb-4">
         <label>Cargo en la empresa:</label>
-        <input class="form-control" type="text" formControlName="puesto" placeholder="Introduzca el puesto desempeñado">
+        <input class="form-control" type="text"
+        [ngClass]="{'is-invalid': puesto?.errors && puesto?.touched,
+      'is-valid':  !puesto?.errors && puesto?.value }"
+        formControlName="puesto" placeholder="Introduzca el puesto desempeñado">
         <div *ngIf="puesto?.errors && puesto?.touched">
           <p *ngIf="puesto?.hasError('required')" class="text-danger">
             El cargo desempeñado en la empresa es requerido.
@@ -41,7 +47,10 @@
       </div>
       <div class="md-form mb-4">
         <label>Fecha Inicio:</label>
-        <input class="form-control" type="date" formControlName="fechaInicio" placeholder="Fecha de ingreso">
+        <input class="form-control" type="date"
+        [ngClass]="{'is-invalid': fechaInicio?.errors && fechaInicio?.touched,
+      'is-valid':  !fechaInicio?.errors && fechaInicio?.value }"
+        formControlName="fechaInicio" placeholder="Fecha de ingreso">
         <div *ngIf="fechaInicio?.errors && fechaInicio?.touched">
           <p *ngIf="fechaInicio?.hasError('required')" class="text-danger">
             La fecha de inicio es requerido.
@@ -50,7 +59,10 @@
       </div>
       <div class="md-form mb-4">
         <label> Fecha Final:</label>
-        <input class="form-control" type="date" formControlName="fechaFinal" placeholder="Fecha de egreso">
+        <input class="form-control" type="date"
+        [ngClass]="{'is-invalid': fechaFinal?.errors && fechaFinal?.touched,
+      'is-valid':  !fechaFinal?.errors && fechaFinal?.value }"
+        formControlName="fechaFinal" placeholder="Fecha de egreso">
         <div>
           <p *ngIf="fechaInicio?.value > fechaFinal?.value" class="text-danger">
             La fecha de inicio no puede ser mayor que la fecha final.
@@ -59,8 +71,11 @@
       </div>
       <div class="md-form mb-4">
         <label>Descripcion:</label>
-        <textarea class="form-control" type="text" formControlName="descripcion"
-        placeholder="Describa cuales eran sus funciones" minlength ="20" maxlength="180" rows="4">
+        <textarea class="form-control" type="text"
+        [ngClass]="{'is-invalid': descripcion?.errors && descripcion?.touched,
+      'is-valid':  !descripcion?.errors && descripcion?.value }"
+        formControlName="descripcion"
+        placeholder="Describa cuales eran sus funciones"rows="4">
       </textarea>
         <div *ngIf="descripcion?.errors && descripcion?.touched">
           <p *ngIf="descripcion?.hasError('required')" class="text-danger">
@@ -77,7 +92,10 @@
           <img src="{{urlLogo}}" class="img-fluid" alt="Responsive image">
         </div>
         <label>URL de la imagen</label>
-        <input class="form-control" type="text" formControlName="logoEmpresa" placeholder="Ingrese una URL">
+        <input class="form-control" type="text"
+        [ngClass]="{'is-invalid': formExp.get('logoEmpresa')?.hasError('pattern'),
+      'is-valid': !formExp.get('logoEmpresa')?.hasError('pattern') && formExp.get('logoEmpresa')?.value}"
+        formControlName="logoEmpresa" placeholder="Ingrese una URL valida para el logo de la empresa">
         <div>
           <p *ngIf="formExp.get('logoEmpresa')?.hasError('pattern')" class="text-danger">
             Ingrese una URL valida.
